--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.13.0" />
   </ItemGroup>
